<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <midian.baselib.widget.BaseLibTopbarView
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/window_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!-- 步骤 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/lime"
                    android:textSize="46.1sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/2"
                    android:textColor="@color/lime"
                    android:textSize="23sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/note_verify"
                android:textColor="@color/lime"
                android:textSize="13sp" />

            <!-- 提示 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/hint_modify_password_verify_phone"
                    android:textColor="@color/login_edit"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />
            <!-- 账号 -->

            <LinearLayout
                android:id="@+id/ll_account_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/login_text_topic"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="37dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_account"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/login_edit"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:id="@+id/ll_auth_code_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_code"
                    android:textColor="@color/login_text_topic"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/auth_code_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="27dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.67"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_auth_code"
                    android:lines="1"
                    android:phoneNumber="true"
                    android:singleLine="true"
                    android:textColor="@color/login_edit"
                    android:textSize="13sp" />
                <!-- 验证码 -->

                <Button
                    android:id="@+id/get_auth_code_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_auth_code"
                    android:gravity="center"
                    android:text="@string/auth_code"
                    android:textColor="@color/lime"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="15dp" />
            <!-- 下一步 -->

            <Button
                android:id="@+id/next_btn"
                android:layout_width="259dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_rectangle_green"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="15dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>